--- a/src/main/java/View/HistoricoPartidaView.form
+++ b/src/main/java/View/HistoricoPartidaView.form
@@ -54,7 +54,7 @@
                 <Column editable="true" title="MELHOR GOL" type="java.lang.Object"/>
               </Table>
             </Property>
-            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="DefaultTableCellRenderer centerRenderer = new DefaultTableCellRenderer();&#xa;        centerRenderer.setHorizontalAlignment(SwingConstants.CENTER);&#xa;        DefaultTableCellRenderer headerRenderer = (DefaultTableCellRenderer) tblHistoricoPartidas.getTableHeader().getDefaultRenderer();&#xa;        headerRenderer.setHorizontalAlignment(DefaultTableCellRenderer.CENTER);&#xa;        tblHistoricoPartidas.setDefaultRenderer(Object.class, centerRenderer);">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
